@@ -40,53 +40,4 @@ class ConfigForm extends BaseConfigForm
         $result['triggerOrderStatus[]'] = $result['triggerOrderStatus'];
         return $result;
     }
-
-    /**
-     * {@inheritdoc}
-     *
-     * This override returns the config form. At the minimum, this includes the
-     * account settings. If these are OK, the other settings are included as
-     * well.
-     */
-    public function getFieldDefinitions()
-    {
-        $result = parent::getFieldDefinitions();
-
-        // Add icons.
-        if (isset($result['accountSettings'])) {
-            $result['accountSettings']['icon'] = 'icon-user';
-            if (isset($result['accountSettings']['fields'][Tag::Password])) {
-                $result['accountSettings']['fields'][Tag::Password]['attributes']['required'] = false;
-            }
-        }
-        if (isset($result['shopSettings'])) {
-            $result['shopSettings']['icon'] = 'icon-shopping-cart';
-        }
-        if (isset($result['triggerSettings'])) {
-            $result['triggerSettings']['icon'] = 'icon-exchange';
-        }
-        if (isset($result['invoiceSettings'])) {
-            $result['invoiceSettings']['icon'] = 'icon-list-alt';
-        }
-        if (isset($result['paymentMethodAccountNumberFieldset'])) {
-            $result['paymentMethodAccountNumberFieldset']['icon'] = 'icon-credit-card';
-        }
-        if (isset($result['paymentMethodCostCenterFieldset'])) {
-            $result['paymentMethodCostCenterFieldset']['icon'] = 'icon-credit-card';
-        }
-        if (isset($result['emailAsPdfSettingsHeader'])) {
-            $result['emailAsPdfSettingsHeader']['icon'] = 'icon-file-pdf-o';
-        }
-        if (isset($result['pluginSettings'])) {
-            $result['pluginSettings']['icon'] = 'icon-puzzle-piece';
-        }
-        if (isset($result['versionInformation'])) {
-            $result['versionInformation']['icon'] = 'icon-info-circle';
-        }
-        if (isset($result['advancedConfig'])) {
-            $result['advancedConfig']['icon'] = 'icon-cogs';
-        }
-
-        return $result;
-    }
 }
